--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -95,6 +95,7 @@
             </div>
         </div>
         <div class="col">
+              <a href="/Mentor/Home/ManageSubTopics">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">SubTopic</h5>
