--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -19,7 +19,7 @@
 <h1 class="mt-5">Manage Topics</h1>
 
 <p>
-	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditTopic(0)"> Add New Topic</a>
+	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditSubTopic(0)"> Add New Topic</a>
 </p>
 <table class="table table-hover table-bordered">
 	<thead>
@@ -75,13 +75,13 @@
 	</tbody>
 </table>
 
-<div class="modal fade" id="topicModal">
+<div class="modal fade" id="subTopicModal">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h3 class="modal-title">Save Topic</h3>
 			</div>
-			<div class="modal-body" id="topicAddEditBody">
+			<div class="modal-body" id="subTopicAddEditBody">
 			</div>
 		</div>
 	</div>
@@ -91,10 +91,10 @@
 
 <script type="text/javascript">
 
-	var AddEditTopic = function (id) {
-		var editTopicData = "/Shared/Topics/AddEditTopic?Id=" + id;
-		$("#topicAddEditBody").load(editTopicData, function () {
-			$("#topicModal").modal("show");
+	var AddEditSubTopic = function (id) {
+		var editTopicData = "/Shared/SubTopics/AddEditSubTopic?Id=" + id;
+		$("#subTopicAddEditBody").load(editTopicData, function () {
+			$("#subTopicModal").modal("show");
 		});
 	};
 
