Added the css of user in a separate file user.css

--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -1,12 +1,6 @@
 ﻿@model iTrainee.Models.User
 
-<head>
-    <style>
-        .padding-top-15px {
-            padding-top: 6.3px;
-        }
-    </style>
-</head>
+<link rel="stylesheet" href="/css/user.css">
 
 <form id="myForm" method="Post">
     <div class="row">
@@ -104,13 +98,14 @@
 
         $("#btnSubmit").click(function () {
             var a = $("#myForm").serialize();
+                                debugger;
+
             $.ajax({
                 type: "POST",
                 url: "/Admin/Home/SaveUser",
                 data: a,
                 success: function () {
                     $("#myModal1").modal("hide");
-                    window.location.replace(window.location.href);
                 },
                 error: function () {
                     alert("Unable to save/update data");
