--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -3,28 +3,7 @@
 @{
     ViewData["Title"] = "ManageUser";
 }
-
-<style>
-    .delete-icon {
-        color: red;
-        font-size: x-large;
-    }
-
-    .edit-icon {
-        color: #00239B;
-        font-size: x-large;
-    }
-
-    .btn-add-gradient {
-        background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
-        border-radius: 4px;
-        box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
-        color: #FFFF;
-        cursor: pointer;
-        transform: translateY(-6px);
-        transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
-    }
-</style>
+<link rel="stylesheet" href="/css/user.css">
 
 <div class="d-flex justify-content-between mt-4">
     <h3>Manage @ViewBag.Role</h3>
