--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -52,7 +52,7 @@
                             <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Trainee">Trainee</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Batch</a>
+                            <a class="nav-link text-white" href="/Shared/Batch/ManageBatch">Batch</a>
                         </li>
 
                         <li class="nav-item px-3">
