--- a/iTrainee.MVC/Views/Shared/_Layout.cshtml
+++ b/iTrainee.MVC/Views/Shared/_Layout.cshtml
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="~/chosen/chosen.min.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.6.2/chosen.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-    <link href="http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/css/bootstrap-multiselect.css"
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
+    <link href="https://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/css/bootstrap-multiselect.css"
     rel="stylesheet" type="text/css" />
-<script src="http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js"
+<script src="https://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js"
     type="text/javascript"></script>
 </head>
 <body>
