--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
@@ -15,10 +15,8 @@
 }
 </style>
 
-<h1>Sub Topics</h1>
-
 <p>
-  <a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditSubTopic(0)"> Add New Sub Topic</a>
+	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditSubTopic(0)"> Add New Sub Topic</a>
 </p>
 <table class="table table-hover table-bordered">
     <thead>
@@ -54,15 +52,11 @@
                 @Html.DisplayFor(modelItem => item.ReferenceURL)
             </td>
             <td class="text-center">
-					<a href="#" class="btn btn-primary" onclick="AddEditSubTopic(@item.Id)"><i class="fa fa-pencil"></i></a>
-					</td>
-					<td class="text-center">
-					<a class="btn btn-danger btn-xs delete-button" href="/Shared/SubTopics/DeleteSubTopics/@item.Id"><i class="fa fa-trash"></i></a>
-					@*  @using (Html.BeginForm("DeleteStream", "Stream", new { id = item.Id, Area="Shared" }))
-						{
-						<button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete record with ID = @item.Id');"><i class="fa fa-trash"></i> Delete</button>
-						}*@
-				</td>
+					<a href="#" class="btn btn-primary" onclick="AddEditSubTopic(@item.Id)"><i class="fa fa-pencil"></i></a> 
+					
+					<a data-id-to-delete="@item.Id" class="btn btn-primary ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
+				
+				   </td>
         </tr>
 }
     </tbody>
@@ -80,16 +74,49 @@
 	</div>
 </div>
 
+<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure want to delete <span id="name-to-delete"></span>???</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" id="delete-yes-button" data-dismiss="modal">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-
+@section Scripts {
 <script type="text/javascript">
 
 	var AddEditSubTopic = function (id) {
-		var editTopicData = "/Shared/SubTopics/AddEditSubTopic?Id=" + id;
-		$("#subTopicAddEditBody").load(editTopicData, function () {
+		var editSubTopicData = "/Shared/SubTopics/AddEditSubTopic?Id=" + id;
+		$("#subTopicAddEditBody").load(editSubTopicData, function () {
 			$("#subTopicModal").modal("show");
 		});
 	};
+    $('#delete').on('show.bs.modal', function (event) {
+         debugger
+            var button = $(event.relatedTarget)
+            var id = button.data('id-to-delete')
+            debugger
+                    $('#delete-yes-button').on('click', function () {
+                        $.ajax({
+                            url: "/Shared/SubTopics/DeleteSubTopic?Id=" + id,
+                            type: "POST",
+                            contentType: "application/json;charset=UTF-8",
+                            dataType: "json",
 
-
+                        })
+                    })
+        })
 </script>
+}
