--- a/iTrainee.MVC/Areas/Shared/Views/SubTopics/AddEditSubTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/SubTopics/AddEditSubTopic.cshtml
@@ -1,12 +1,13 @@
 ﻿@model iTrainee.Models.SubTopics
-@using Microsoft.AspNetCore.Mvc.Rendering;
 
+<h4>Sub Topics</h4>
+<hr />
 <div class="row">
 	<div class="col-lg-12">
-		<form id="subTopicForm">
+		<form id="subTopicForm" method="post">
 			<div class="form-group">
-				<label class="col-form-label">Streams</label><br />
-				@Html.DropDownListFor(model => model.TopicId, ViewBag.streamList as SelectList, "Select Sub Topic",  htmlAttributes: new { @class = "form-control"  })
+				<label class="col-form-label">Topics</label><br />
+				@Html.DropDownListFor(model => model.TopicId, ViewBag.TopicsList as SelectList, "Select Topics",  htmlAttributes: new { @class = "form-control"  })
 			</div>
 			<div class="form-group">
 				<div class="form-group">
@@ -27,21 +28,16 @@
 		</form>
 	</div>
 </div>
-
-
 @section Scripts {
     @{
-	await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
 }
-
 <script>
-
-
 		$(document).ready(function () {
-
+			debugger
 		$("#btnSubTopicSave").click(function () {
-
+			debugger
 			var updatedSubTopicData = $("#subTopicForm").serialize();
 			$.ajax({
 				type: "POST",
@@ -49,7 +45,7 @@
 				data: updatedSubTopicData,
 				success: function () {
 					$("#subTopicModal").modal("hide");
-					window.location.replace("/Mentor/Home/ManageSubTopics")
+					//window.location.replace("/Mentor/Home/ManageSubTopics")
 				},
 				error: function () {
 					alert("Unable to save data");
@@ -58,3 +54,4 @@
 		});
 	});
 </script>
+
