--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -1,4 +1,6 @@
-﻿@*
+﻿
+@*
+
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
@@ -20,7 +22,7 @@
                 </li>
                 <li class="nav-item dropdown px-2">
                     <a class="text-dark nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="\css\logo.jpg" width="40" height="40" class="rounded-circle"> <span class="px-2">User_Name</span>
+                        <img src="\css\logo.jpg" width="40" height="40" class="rounded-circle"> <span class="px-2">@TempData["HeaderUserName"]</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Profile</a>
@@ -69,7 +71,7 @@
                             <a class="nav-link text-white" href="#">Daily Progress</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Alert Trainee</a>
+                            <a class="nav-link text-white" href="/Shared/Messages/ManageMessages?id=@TempData["UserId"]">Alert Trainee</a>
                         </li>
                     }
                     @if (TempData["HeaderRole"].Equals("Mentor"))
@@ -82,6 +84,9 @@
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageSubTopics">Sub Topics</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="#">Alert Trainee</a>
                         </li>
                     }
                     @if (TempData["HeaderRole"].Equals("Trainee"))
