--- a/iTrainee.MVC/Views/Home/Login.cshtml
+++ b/iTrainee.MVC/Views/Home/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model iTrainee.Models.User
+@{
     ViewData["Title"] = "Login Page";
 }
 
@@ -27,12 +28,24 @@
 
                                 <div class="form-outline mb-3">
                                     <label class="form-label text-muted" for="form2Example17">Email</label>
-                                    <input type="email" name="UserName" class="form-control form-control-sm" />
+                                    <input type="email" name="UserName" class="form-control form-control-sm" value="@Model.UserName" />
+                                     @if(Convert.ToString(TempData["IsValidUserName"]) == "false")
+                                    {
+                                        <span class="text-danger font-weight-bold">Invalid Email ID</span>
+                                          TempData["IsValidUserName"] = "true";
+                                    }
                                 </div>
 
                                 <div class="form-outline mb-3">
                                     <label class="form-label text-muted" for="form2Example27">Password</label>
                                     <input type="password" name="Password" class="form-control form-control-sm" />
+                                    
+                                    @if(Convert.ToString(TempData["IsValidPassword"]) == "false")
+                                    {
+                                        <span class="text-danger font-weight-bold">Invalid Password</span>
+                                          TempData["IsValidPassword"] = "true";
+                                    }
+                                    
                                 </div>
 
                                 <div class="pt-2 mb-2">
