--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -6,7 +6,8 @@
     <div class="row">
         <div class="col-md-6">
             @{
-                TempData.Keep("Role");
+                TempData.Peek("Role");
+                TempData.Peek("UserToken");
             }
             <div class="form-group">
                 <input type="hidden" class="form-control" name="Id" value="@Model.Id" required />
@@ -93,7 +94,7 @@
 }
 }
 
-<script>
+<script type="text/javascript">
         $(document).ready(function () {
 
         $("#btnSubmit").click(function () {
