--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -6,6 +6,9 @@
 	ViewData["Title"] = "AddEditBatch";
 }
 <h3 class="mt-5 mb-4">Save Batch</h3>
+		            @{
+                TempData.Peek("UserToken");
+            }
 @using (Html.BeginForm())
 {
 	<div class="form-group">
