Implemented Anti Forgery Token

--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -91,7 +91,7 @@
 
 <script type="text/javascript">
 
-	var AddEditSubTopic = function (id) {
+	var AddEditTopic = function (id) {
 		var editTopicData = "/Shared/Topics/AddEditTopic?Id=" + id;
 		$("#topicAddEditBody").load(editTopicData, function () {
 			$("#topicModal").modal("show");
