--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="/css/user.css">
 
 <form id="myForm" method="Post">
+    @Html.AntiForgeryToken()
     <div class="row">
         <div class="col-md-6">
             @{
@@ -85,6 +86,7 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <input type="submit" value="Save" name="submit" id="btnSubmit" class="btn btn-primary mr-3" />
     </div>
+    
 </form>
 
 @section Scripts {
