--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -8,6 +8,8 @@
 <h3 class="mt-5 mb-4">Save Batch</h3>
 @using (Html.BeginForm())
 {
+	    @Html.AntiForgeryToken()
+    
 	<div class="form-group">
 		<label class="col-form-label">Name</label>
 		<input type="text" class="form-control w-25" name="Name" value="@Model.Name" />
@@ -27,7 +29,7 @@
 		<label class="col-form-label">Streams</label><br />
 		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="multiSelectStream", @class = "form-control", multiple="multiple" })
 	</div>
-	<input type="submit" class="mt-3 float-right btn btn-primary" value="Save" />
+	<input type="submit" class="mt-3 btn btn-primary" value="Save" />
 }
 
 @section scripts{
