Implemented JWT authentication in Admin User

--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-6">
             @{
-                TempData.Peek("Role");
+                TempData.Keep("Role");
                 TempData.Peek("UserToken");
             }
             <div class="form-group">
