Added Change password flow

--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -24,7 +24,9 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#">Change Password</a>
+                      
+	                   <a href="/Home/ChangePassword" class="dropdown-item btn btn-primary"> Change Password</a>
+
                         <a class="dropdown-item" href="#">Sign Out</a>
                     </div>
                 </li>
@@ -95,3 +97,55 @@
         </div>
     </nav>
 </header>
+
+<div class="modal" fade" id="changePassword">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Change Password</h3>
+            </div>
+            <div class="modal-body" id="changePasswordBody">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@*@section scripts {
+<script type="text/javascript">
+     debugger
+    function ChangePassword() {
+        debugger
+        var UserPath = "/Home/ChangePassword";
+        $("#changePasswordBody").load(UserPath, function () {
+            $("#changePassword").modal("show");
+        });
+    };
+
+     var GetUser = function (id) {
+        var UserPath = "/Admin/Home/SaveUser?Id=" + id;
+        $("#myModalBodyDiv1").load(UserPath, function () {
+            $("#myModal1").modal("show");
+        });
+    };
+</script>
+
+}*@
+
+<script type="text/javascript">
+     debugger
+    function ChangePassword() {
+        debugger
+        var UserPath = "/Home/ChangePassword";
+        $("#changePasswordBody").load(UserPath, function () {
+            $("#changePassword").modal("show");
+        });
+    };
+
+     var GetUser = function (id) {
+        var UserPath = "/Admin/Home/SaveUser?Id=" + id;
+        $("#myModalBodyDiv1").load(UserPath, function () {
+            $("#myModal1").modal("show");
+        });
+    };
+</script>
