--- a/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
@@ -10,13 +10,14 @@
 			</div>
 			<div class="form-group">
 				<div class="form-group">
-					<label class="col-form-label">Name</label>
+					<label class="col-form-label">Name</label>s
 					<input type="text" class="form-control" name="Name" value="@Model.Name" />
 				</div>
 			</div>
 
 			<div class="form-group">
 				<div class="form-group">
+
 					<label class="col-form-label">Reference URL</label>
 					<input type="text" class="form-control" name="ReferenceURL" value="@Model.ReferenceURL" />
 				</div>
@@ -55,6 +56,6 @@
 					alert("Unable to save data");
 				},
 			});
-		});
+		});s
 	});
 </script>
