--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
@@ -15,32 +15,29 @@
 }
 </style>
 
-<p>
-	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditSubTopic(0)"> Add New Sub Topic</a>
-</p>
+<div class="d-flex justify-content-between mt-4">
+<h3>Manage SubTopics</h3>
+<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditSubTopic(0)"> Add New Sub Topic</a>
+</div>
+
 <table class="table table-hover table-bordered">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TopicId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReferenceURL)
-            </th>
+            <th>S.No</th>
+            <th>Topic</th>
+            <th>Sub Topic</th>
+            <th>Reference URL</th>
             <th  colspan="2">Actions</th>
         </tr>
     </thead>
     <tbody>
+        @{
+            int Count = 1;
+        }
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                @Count;
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TopicId)
@@ -57,8 +54,9 @@
 					<a data-id-to-delete="@item.Id" class="btn btn-primary ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
 				
 				   </td>
-        </tr>
-}
+            </tr>
+            Count += 1;
+        }
     </tbody>
 </table>
 
