Implemented JWT Authentication for Stream, Topic, Batch

--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -19,7 +19,7 @@
 <h1 class="mt-5">Manage Topics</h1>
 
 <p>
-	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditSubTopic(0)"> Add New Topic</a>
+	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditTopic(0)"> Add New Topic</a>
 </p>
 <table class="table table-hover table-bordered">
 	<thead>
