--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -25,7 +25,7 @@
     {
         <tr>
             <td>
-                @Count;
+                @Count
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
