--- a/iTrainee.MVC/Views/Home/ChangePassword.cshtml
+++ b/iTrainee.MVC/Views/Home/ChangePassword.cshtml
@@ -8,32 +8,78 @@
 		<h3 class="card-title text-center">Change password</h3>
 		
 		<!--Password must contain one lowercase letter, one number, and be at least 7 characters long.-->
-		
+		<h2>@TempData["CurrentPassword"]</h2>
 		<div class="card-text small">
-			<form id="changePassword" method="post">
+			<form id="changePasswordForm">
+				<div id="passwordVerifyBlock">
 				<div class="form-group">
 					<label for="exampleInputEmail1">Current Password</label>
-					<input type="password" id="currentPassword" class="form-control form-control-sm">
+					<input type="password" id="currentPassword"  class="form-control form-control-sm" required>
 				</div>
-				<div class="form-group">
-					<label for="exampleInputEmail1">Your new password</label>
-					<input type="password" id="newPassword" class="form-control form-control-sm">
+				<span id="passwordMisMatchError"></span>
+				<button type="button" id="verify">Click Here To Continue</button>
 				</div>
-				<div class="form-group">
-					<label for="exampleInputEmail1">Confirm password</label>
-					<input type="password" id="confirmPassword" class="form-control form-control-sm">
+				<div id="newPasswordBlock">
+
+					<div class="form-group hide" id="newPasswordBlock" >
+						<label for="exampleInputEmail1">Your new password</label>
+						<input type="password" id="newPassword" class="form-control form-control-sm" required>
+					</div>
+
+					<div class="form-group hide" id="confirmPasswordBlock" >
+						<label for="exampleInputEmail1">Confirm password</label>
+						<input type="password" id="confirmPassword" class="form-control form-control-sm" required>
+					</div>
+					<button  class="btn btn-primary btn-block" id="btnChangePassword">Confirm</button>
 				</div>
-				<button type="submit" class="btn btn-primary btn-block submit-btn">Confirm</button>
 			</form>
 		</div>
 	</div>
 </div>
-
-@section Scripts {
 	<script type="text/javascript">
-	 var current password = 
+		$(document).ready(function() {
+			$("#newPasswordBlock").hide();
+			$("#verify").click( function() 
+			{
+				var currentpassword = '@TempData["CurrentPassword"]';
+				var verifyPassword = $("#currentPassword").val();
+				if(currentpassword == verifyPassword)
+				{
+					$("#passwordVerifyBlock").hide();
+					$("#newPasswordBlock").show();
+					
+				} else 
+				{
+					alert("Password Cannot Match! PleaseEnter Valid Password.");
+				}
+			});
 
-
-
+			$("#btnChangePassword").click( function Submit(){
+				if ($("#newPassword").val() == $("#confirmPassword").val()) 
+				{
+					var newPassword = $("#newPassword").val();
+					var userId ='@TempData["UserId"]';
+					debugger
+					$.ajax({
+						type: "POST",
+						url: "/Home/ChangePassword",
+						data:{ id: userId, updatedPassword: newPassword },
+						success: function () {
+							$("#changePassword").modal("hide");
+							window.location.replace("/Home/index");
+						},
+						error: function () {
+						alert("Unable to Change Password");
+						},
+					});
+				} else 
+				{
+					alert("Password Cannot Same! Please Enter Same Password");
+					$('#changePasswordForm')[0].reset();
+					Submit();
+				}
+				
+			});
+			
+		});
 	</script>
-}
