Implementing Trainee Dashboard view

--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -12,7 +12,7 @@
 <p>Sign-Out :</p>
 </div>
 
-<p>Hello Kaviya R,</p>
+<h4 class="font-weight-bold">Hello @TempData.Peek("UserFirstName"),</h4>
 <div class="col">
     <div class="row">
     <p>C# Basics</p>
