Added user Topcis repo and service layer

--- a/iTrainee.MVC/Views/Home/ChangePassword.cshtml
+++ b/iTrainee.MVC/Views/Home/ChangePassword.cshtml
@@ -10,7 +10,7 @@
 		<!--Password must contain one lowercase letter, one number, and be at least 7 characters long.-->
 		<h2>@TempData["CurrentPassword"]</h2>
 		<div class="card-text small">
-			<form id="changePasswordForm">
+			<form id="changePasswordForm" method="post">
 				<div id="passwordVerifyBlock">
 				<div class="form-group">
 					<label for="exampleInputEmail1">Current Password</label>
@@ -58,12 +58,12 @@
 				if ($("#newPassword").val() == $("#confirmPassword").val()) 
 				{
 					var newPassword = $("#newPassword").val();
-					var userId ='@TempData["UserId"]';
+					var UserId ='@TempData["UserId"]';
 					debugger
 					$.ajax({
 						type: "POST",
 						url: "/Home/ChangePassword",
-						data:{ id: userId, updatedPassword: newPassword },
+						data:{ userId: UserId, updatedPassword: newPassword },
 						success: function () {
 							$("#changePassword").modal("hide");
 							window.location.replace("/Home/index");
