--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -68,6 +68,9 @@
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageSubTopics">Sub Topics</a>
                         </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="/Shared/UserTopics/AddEditUserTopics">Assign Topics</a>
+                        </li>
 
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="#">Daily Progress</a>
@@ -86,6 +89,9 @@
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Mentor/Home/ManageSubTopics">Sub Topics</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="/Shared/UserTopics/AddEditUserTopics">Assign Topics</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="#">Alert Trainee</a>
