completed till JWT authentication

--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -10,7 +10,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Admin</h5>
-                        <p class="card-text">Mentor is an advisor, counselor, or guide to a trainee.</p>
+                        <p class="card-text">Admin has control over creating admin, mentor, trainee and others</p>
                     </div>
 
                 </div>
@@ -78,6 +78,16 @@
                     <div class="card-body">
                         <h5 class="card-title">SubTopic</h5>
                         <p class="card-text">Manage subtopics given to the trainee to learn. Click to Create, Update, view the subtopics</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a href="/Mentor/Home/ManageTopics">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Assign Topics & SubTopics</h5>
+                        <p class="card-text">Assigning topics and their respective subtopics to trainees</p>
                     </div>
                 </div>
             </a>
