Completed SQL Loop for batch user and batch stream repo

--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageSubTopics.cshtml
@@ -37,10 +37,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Count;
+                @Count
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TopicId)
+                @Html.DisplayFor(modelItem => item.TopicName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
