--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -4,11 +4,23 @@
     ViewData["Title"] = "ManageUser";
 }
 <link rel="stylesheet" href="/css/user.css">
-
+<div id="viewPlaceHolder"></div>
 <div class="d-flex justify-content-between mt-4">
+     @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")) )
+    {
+        <h3>Trainee Details</h3>
+    } else
+    {
     <h3>Manage @ViewBag.Role</h3>
-    <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetUser(0)" data-target="#myModal1">Add New</button>
+    }
+
+     @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")) ){
+    } else
+    {
+        <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetUser(0)" data-target="#myModal1">Add New</button>
+    }
 </div>
+
 <table class="table table-hover table-bordered">
     <tr>
         <th>S.No</th>
@@ -40,8 +52,14 @@
                 @Html.DisplayFor(modelItem => item.Qualification)
             </td>
             <td>
-                <a onclick="GetUser(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
-                <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
+                @if (TempData["HeaderRole"].Equals("Mentor") || (TempData["HeaderRole"].Equals("Trainee")) ){
+                    @Html.ActionLink("View Progress", "Index","Home",new {Area = "Trainee" ,userId = item.Id, auditId = 0})
+                }
+                else
+                {
+                    <a id="ediit" onclick="GetUser(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
+                    <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
+                }
             </td>
         </tr>
         Count += 1;
