--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -24,26 +24,26 @@
     }
 
     /*    #chat2 .form-control {
-                                        border-color: transparent;
-                                    }
+                                                    border-color: transparent;
+                                                }
 
-                                        #chat2 .form-control:focus {
-                                            border-color: transparent;
-                                            box-shadow: inset 0px 0px 0px 1px transparent;
-                                        }
+                                                    #chat2 .form-control:focus {
+                                                        border-color: transparent;
+                                                        box-shadow: inset 0px 0px 0px 1px transparent;
+                                                    }
 
-                                    .divider:after,
-                                    .divider:before {
-                                        content: "";
-                                        flex: 1;
-                                        height: 1px;
-                                        background: #eee;
-                                    }*/
+                                                .divider:after,
+                                                .divider:before {
+                                                    content: "";
+                                                    flex: 1;
+                                                    height: 1px;
+                                                    background: #eee;
+                                                }*/
 </style>
 
 <div class="d-flex justify-content-between mt-4">
     <h3>Messages</h3>
-    <a href="/Shared/Batch/AddEditBatch?Id=0" class="btn btn-primary btn-add-gradient float-right mb-3"> Add New Alert</a>
+    <a href="#" onclick="AddEditAlert(0)" class="btn btn-primary btn-add-gradient float-right mb-3"> Add New Alert</a>
 </div>
 
 <table class="table table-hover table-bordered">
@@ -66,7 +66,7 @@
                     @Html.DisplayFor(modelItem => item.Message)
                 </td>
                 <td class="text-center actions-column">
-                    <a href="/Shared/Messages/AddEditMessages?Id=@item.Id"><i class="fa fa-pencil edit-icon"></i></a>
+                    <a href="#" onclick="AddEditAlert(@item.Id)"><i class="fa fa-pencil edit-icon"></i></a>
                 </td>
                 <td class="text-center actions-column">
                     @using (Html.BeginRouteForm(routeName: "Shared",
@@ -106,10 +106,19 @@
 </div>
 
 <script type="text/javascript">
-        var ViewAlertDetails = function (id) {
+
+    function ViewAlertDetails(id) {
         var url = "/Shared/Messages/ViewAlertDetails?Id=" + id;
         $("#alertModalBodyDiv").load(url, function () {
             $("#alertModal").modal("show");
         });
     };
+
+    function AddEditAlert(id) {
+        var url = "/Shared/Messages/AddEditAlert?Id=" + id;
+        $("#alertModalBodyDiv").load(url, function () {
+            $("#alertModal").modal("show");
+        });
+    };
+
 </script>
